[project]
name = "claude-pair"
version = "0.1.0"
description = "A Claude pair programmer that watches your tmux pane and offers suggestions"
requires-python = ">=3.9"
dependencies = ["anthropic>=0.90"]

[project.scripts]
claude-pair = "claude_pair.watcher:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["claude_pair"]
